[package]
name = "pcm-loader"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/MeadowlarkDAW/pcm-loader"
description = "Easily load audio files into RAM"
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]
keywords = ["audio", "codec", "decoder", "multimedia", "media"]
publish = false # TODO: Remove this when ready to publish

[features]
default = ["flac", "mkv", "ogg", "pcm", "vorbis", "wav"]
aac = ["symphonia/aac"]
alac = ["symphonia/alac"]
flac = ["symphonia/flac"]
isomp4 = ["symphonia/isomp4"]
mkv = ["symphonia/mkv"]
mp3 = ["symphonia/mp3"]
ogg = ["symphonia/ogg"]
pcm = ["symphonia/pcm"]
vorbis = ["symphonia/vorbis"]
wav = ["symphonia/wav"]

[dependencies]
samplerate-rs = { git = "https://github.com/MeadowlarkDAW/samplerate-rs.git", branch = "master" }
symphonia = { version = "0.5", default-features = false }
fnv = "1.0"
log = "0.4"